Change abstract buttons to Lendings buttons. Add ISBN to BookInfoActivity.kt and display "no description" when doesn't have a description

--- a/app/src/main/res/layout/activity_book_info.xml
+++ b/app/src/main/res/layout/activity_book_info.xml
@@ -250,129 +250,143 @@
                     app:layout_constraintTop_toBottomOf="@id/tv_description" />
 
                 <TextView
-                    android:id="@+id/tv_label_annotations"
+                    android:id="@+id/tv_label_more_info"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/label_annotations"
+                    android:text="@string/label_more_info"
                     android:textColor="@color/black"
                     android:textSize="20sp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/tv_description_show_more" />
 
-                <ImageView
-                    android:id="@+id/iv_ic_annotation_1"
-                    android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/tv_isbn_10"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="32dp"
-                    android:src="@drawable/ic_annotation_yellow"
+                    android:justificationMode="inter_word"
+                    android:lineSpacingExtra="9sp"
+                    android:paddingHorizontal="16dp"
+                    android:text="@string/label_loading_three_dots"
+                    android:textColor="@color/gray_transparent_80"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tv_label_annotations" />
-
-                <ImageView
-                    android:id="@+id/iv_ic_annotation_2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:src="@drawable/ic_annotation_yellow"
-                    app:layout_constraintStart_toEndOf="@id/iv_ic_annotation_1"
-                    app:layout_constraintTop_toTopOf="@id/iv_ic_annotation_1" />
-
-                <ImageView
-                    android:id="@+id/iv_ic_annotation_3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:src="@drawable/ic_annotation_yellow"
-                    app:layout_constraintStart_toEndOf="@id/iv_ic_annotation_2"
-                    app:layout_constraintTop_toTopOf="@id/iv_ic_annotation_2" />
-
-                <ImageView
-                    android:id="@+id/iv_ic_annotation_4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:src="@drawable/ic_annotation_yellow"
-                    app:layout_constraintStart_toEndOf="@id/iv_ic_annotation_3"
-                    app:layout_constraintTop_toTopOf="@id/iv_ic_annotation_3" />
-
+                    app:layout_constraintTop_toBottomOf="@id/tv_label_more_info"
+                    tools:text="ISBN-10: 0123456789" />
 
                 <TextView
-                    android:id="@+id/tv_annotation_show_more"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/tv_isbn_13"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="16dp"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:gravity="end"
-                    android:text="@string/label_show_more"
-                    android:textColor="@color/gd_blue_purple_0"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
+                    android:justificationMode="inter_word"
+                    android:lineSpacingExtra="9sp"
+                    android:paddingHorizontal="16dp"
+                    android:text="@string/label_loading_three_dots"
+                    android:textColor="@color/gray_transparent_80"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/tv_isbn_10"
+                    tools:text="ISBN-13: 0123456789123" />
+
+
+                <LinearLayout
+                    android:id="@+id/ll_annotation_and_borrow"
+                    android:layout_marginTop="16dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/iv_ic_annotation_4" />
+                    app:layout_constraintTop_toBottomOf="@id/tv_isbn_13"
+                    >
 
-                <TextView
-                    android:id="@+id/tv_label_abstracts"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/label_abstracts"
-                    android:textColor="@color/black"
-                    android:textSize="20sp"
-                    android:textStyle="bold"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tv_annotation_show_more" />
+                    <LinearLayout
+                        android:layout_weight="0.5"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginEnd="4dp"
+                        android:orientation="vertical">
 
-                <ImageView
-                    android:id="@+id/iv_ic_abstract_1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="32dp"
-                    android:src="@drawable/ic_abstract"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tv_label_abstracts" />
+                        <TextView
+                            android:id="@+id/tv_label_annotations"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="@string/label_annotations"
+                            android:textColor="@color/black"
+                            android:textSize="20sp"
+                            android:textStyle="bold"
+                            android:gravity="start"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/tv_description_show_more" />
 
-                <ImageView
-                    android:id="@+id/iv_ic_abstract_2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:src="@drawable/ic_abstract"
-                    app:layout_constraintStart_toEndOf="@id/iv_ic_abstract_1"
-                    app:layout_constraintTop_toTopOf="@id/iv_ic_abstract_1" />
 
-                <ImageView
-                    android:id="@+id/iv_ic_abstract_3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:src="@drawable/ic_abstract"
-                    app:layout_constraintStart_toEndOf="@id/iv_ic_abstract_2"
-                    app:layout_constraintTop_toTopOf="@id/iv_ic_abstract_2" />
+                        <ImageView
+                            android:id="@+id/iv_ic_annotation_1"
+                            android:layout_width="120dp"
+                            android:layout_height="120dp"
+                            android:layout_gravity="center"
+                            android:src="@drawable/ic_annotation_yellow"
+                            android:contentDescription="@string/label_annotation_image" />
 
-                <ImageView
-                    android:id="@+id/iv_ic_abstract_4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:src="@drawable/ic_abstract"
-                    app:layout_constraintStart_toEndOf="@id/iv_ic_abstract_3"
-                    app:layout_constraintTop_toTopOf="@id/iv_ic_abstract_3" />
 
-                <TextView
-                    android:id="@+id/tv_abstract_show_more"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="16dp"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:gravity="end"
-                    android:text="@string/label_show_more"
-                    android:textColor="@color/gd_blue_purple_0"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/iv_ic_abstract_4" />
+                        <TextView
+                            android:id="@+id/tv_annotation_show_more"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginHorizontal="16dp"
+                            android:clickable="true"
+                            android:focusable="true"
+                            android:gravity="center"
+                            android:text="@string/label_show_more"
+                            android:textColor="@color/gd_blue_purple_0"
+                            android:textSize="16sp"
+                            android:textStyle="bold"
+                            />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_marginStart="4dp"
+                        android:layout_weight="0.5"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/tv_label_borrow"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="@string/label_lendings"
+                            android:textColor="@color/black"
+                            android:textSize="20sp"
+                            android:gravity="end"
+                            android:textStyle="bold"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/tv_description_show_more" />
+
+
+                        <ImageView
+                            android:id="@+id/iv_ic_borrow"
+                            android:layout_width="120dp"
+                            android:layout_height="120dp"
+                            android:src="@drawable/book_clock_outline"
+                            app:tint="@color/yellow_orange_1"
+                            android:contentDescription="@string/label_annotation_image" />
+
+
+                        <TextView
+                            android:id="@+id/tv_borrow_show_more"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginHorizontal="16dp"
+                            android:clickable="true"
+                            android:focusable="true"
+                            android:gravity="center"
+                            android:text="@string/label_show_more"
+                            android:textColor="@color/gd_blue_purple_0"
+                            android:textSize="16sp"
+                            android:textStyle="bold"
+                            />
+                    </LinearLayout>
+
+                </LinearLayout>
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -404,7 +418,7 @@
         android:visibility="gone"
         app:borderWidth="0dp"
         app:fabSize="mini"
-        app:srcCompat="@drawable/ic_abstract_transparent_color_white"
+        app:srcCompat="@drawable/book_clock_outline"
         app:tint="@color/white"
         tools:visibility="visible" />
 
