--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -56,6 +56,7 @@
 
     <color name="highlight_purple">#ae33ff</color>
     <color name="highlight_blue">#0037fe</color>
+    <color name="yellow_orange_1">#F1C40F</color>
 
 
 </resources>
