--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
+
     <!-- Base application theme. -->
     <style name="Theme.MyApplication" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <!-- Primary brand color. -->
@@ -15,6 +16,10 @@
 
         <item name="wheatColor">@color/m_editor_wheat</item>
         <!-- Customize your theme here. -->
+    </style>
+
+    <style name="Theme.MyApplication.TwoSearchField" parent="Theme.MyApplication">
+        <item name="actionBarSize">100dip</item>
     </style>
 
     <style name="Theme.MyApplication.NoActionBar" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
