--- a/app/src/main/res/layout/activity_add_borrow.xml
+++ b/app/src/main/res/layout/activity_add_borrow.xml
@@ -4,64 +4,83 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:theme="@style/Theme.MyApplication.PurpleTheme"
+
     tools:context=".ui.borrow.add.AddBorrowActivity">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/til_book_borrow"
+    <com.google.android.material.progressindicator.LinearProgressIndicator
+        android:id="@+id/pg_loading"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="What book did you borrow?"
+        android:indeterminate="true"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:trackColor="@color/white" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/til_contact_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:gravity="center"
+        android:hint="Who did you loan it to?"
+        android:textColorHint="@color/white"
+        app:boxBackgroundColor="@color/splash_screen_dark_purple"
+        app:boxStrokeColor="@color/text_input_layout_white_stroke_color"
+        app:boxStrokeErrorColor="@color/error_tint_on_dark_color"
+        app:errorIconTint="@color/error_tint_on_dark_color"
+        app:errorTextColor="@color/error_tint_on_dark_color"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
+            android:layout_height="wrap_content"
+            android:gravity="left"
+            android:inputType="text"
+            android:textColor="@color/white" />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/til_contact_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Who did you borrow from?"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/til_book_borrow">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/til_borrow_date"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        android:hint="Who did you borrow from?"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/til_contact_name">
-
-        <com.google.android.material.textfield.TextInputEditText
-
-            android:id="@+id/tiet_borrow_date"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-    </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/btn_add_book"
+        android:id="@+id/btn_select_borrow_book"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:text="Select book which you borrow"
+        app:layout_constraintBottom_toTopOf="@id/ll_book_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+
+    <LinearLayout
+        android:id="@+id/ll_book_content"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="40dp"
+        app:layout_constraintBottom_toTopOf="@id/til_contact_name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <include
+            android:id="@+id/item_book"
+            layout="@layout/item_book_binding_full_length" />
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/btn_add_loan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:backgroundTint="@color/gd_blue_purple_1"
-        android:text="@string/label_add_book"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/til_borrow_date" />
+        android:enabled="false"
+        android:text="@string/label_add_your_loan"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
