--- a/app/src/main/res/layout/item_book_binding_full_length.xml
+++ b/app/src/main/res/layout/item_book_binding_full_length.xml
@@ -25,13 +25,13 @@
             />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/tv_title"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -41,13 +41,13 @@
 
             <TextView
                 android:id="@+id/tv_author"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="12sp"
                 tools:text="Gustavo guanabara" />
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_marginBottom="8dp"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent">
             <TextView
                 android:id="@+id/tv_isbn_10"
