--- a/app/src/main/res/layout/item_borrow_pending.xml
+++ b/app/src/main/res/layout/item_borrow_pending.xml
@@ -31,13 +31,15 @@
                 android:orientation="vertical"
                 >
                 <TextView
+                    android:maxWidth="240sp"
                     android:id="@+id/tv_book_title"
-                    android:layout_width="match_parent"
+                    android:layout_width="240sp"
                     android:layout_height="wrap_content"
                     tools:text="Harry potter e a pedra filosofal"
                     android:textSize="16sp"
                     />
                 <TextView
+                    android:maxWidth="200sp"
                     android:id="@+id/tv_borrower_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -45,6 +47,7 @@
                     android:textColor="@color/dark_gray_1"
                     />
                 <TextView
+                    android:maxWidth="200sp"
                     android:id="@+id/tv_borrow_date"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -59,9 +62,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
+                android:layout_columnWeight="1"
                 >
             <ImageView
-                android:layout_columnWeight="1"
+                android:layout_gravity="center"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginHorizontal="20dp"
