--- a/app/src/main/res/layout/activity_book_list.xml
+++ b/app/src/main/res/layout/activity_book_list.xml
@@ -14,6 +14,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:trackColor="?attr/readablePrimaryColor"
+        android:background="@android:color/transparent"
         android:indeterminate="true"
         android:visibility="visible"/>
 
