--- a/app/src/main/res/layout/item_borrow_pending_not_passed_time.xml
+++ b/app/src/main/res/layout/item_borrow_pending_not_passed_time.xml
@@ -30,13 +30,15 @@
                 android:orientation="vertical"
                 >
                 <TextView
+                    android:maxWidth="240sp"
                     android:id="@+id/tv_book_title"
-                    android:layout_width="match_parent"
+                    android:layout_width="240sp"
                     android:layout_height="wrap_content"
                     tools:text="Harry potter e a pedra filosofal"
                     android:textSize="16sp"
                     />
                 <TextView
+                    android:maxWidth="200sp"
                     android:id="@+id/tv_borrower_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -44,6 +46,7 @@
                     android:textColor="@color/dark_gray_1"
                     />
                 <TextView
+                    android:maxWidth="200sp"
                     android:id="@+id/tv_borrow_date"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -58,12 +61,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
+                android:layout_columnWeight="1"
                 >
                 <ImageView
-                    android:layout_columnWeight="1"
+
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_marginHorizontal="20dp"
+                    android:layout_gravity="center"
                     android:layout_marginTop="10dp"
                     android:src="@drawable/book_clock_outline"
                     app:tint="@color/borrow_color_not_passed_time" />
