--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,8 +7,18 @@
         android:title="@string/title_home" />
 
     <item
+        android:id="@+id/navigation_annotation"
+        android:icon="@drawable/ic_menu"
+        android:title="@string/label_annotations" />
+
+    <item
         android:id="@+id/navigation_borrow"
         android:icon="@drawable/book_clock_outline"
         android:title="@string/title_borrow" />
+
+    <item
+        android:id="@+id/navigation_profile"
+        android:icon="@drawable/ic_pen_edit"
+        android:title="@string/label_profile" />
 
 </menu>
