add connection to edit borrow endpoint and delete borrow endpoint

--- a/app/src/main/res/values/spinners.xml
+++ b/app/src/main/res/values/spinners.xml
@@ -6,4 +6,9 @@
         <item>CONCLUDED</item>
         <item>DROPPED</item>
     </string-array>
+
+    <string-array name="spinner_book_borrow_status_key">
+        <item>PENDING</item>
+        <item>RETURNED</item>
+    </string-array>
 </resources>
