--- a/app/src/main/res/layout/fragment_access.xml
+++ b/app/src/main/res/layout/fragment_access.xml
@@ -39,6 +39,7 @@
         app:layout_constraintTop_toBottomOf="@id/tv_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:textColor="@color/white"
         android:layout_marginTop="60dp"
         android:text="@string/label_login"/>
 
@@ -49,6 +50,7 @@
         app:layout_constraintTop_toBottomOf="@id/btn_login"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:textColor="@color/white"
         android:layout_marginTop="20dp"
         android:text="@string/label_register"/>
 
