--- a/app/src/main/res/layout/item_borrow_pending_not_passed_time.xml
+++ b/app/src/main/res/layout/item_borrow_pending_not_passed_time.xml
@@ -25,14 +25,14 @@
             android:layout_height="wrap_content">
             <LinearLayout
                 android:layout_columnWeight="10"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 >
                 <TextView
                     android:maxWidth="240sp"
                     android:id="@+id/tv_book_title"
-                    android:layout_width="240sp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     tools:text="Harry potter e a pedra filosofal"
                     android:textSize="16sp"
