--- a/app/src/main/res/layout/item_book_binding_full_length.xml
+++ b/app/src/main/res/layout/item_book_binding_full_length.xml
@@ -3,13 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:minHeight="201dp"
     android:layout_height="wrap_content"
     android:paddingVertical="8dp"
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/ll_content"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="horizontal">
 
         <ImageView
@@ -26,7 +28,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <TextView
@@ -37,7 +39,7 @@
                 android:textStyle="bold"
 
                 tools:ignore="Suspicious0dp"
-                tools:text="O grande mago retornou depois de 100 anos" />
+                tools:text="@string/label256character" />
 
             <TextView
                 android:id="@+id/tv_author"
