--- a/app/src/main/res/layout/fragment_access.xml
+++ b/app/src/main/res/layout/fragment_access.xml
@@ -54,6 +54,22 @@
         android:layout_marginTop="20dp"
         android:text="@string/label_register"/>
 
+    <TextView
+        android:id="@+id/tv_forgot_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/btn_register"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="20dp"
+        android:textColor="@color/gd_blue_purple_3"
+        android:text="@string/label_forgot_password"
+        android:clickable="true"
+        android:gravity="center"
+        android:textStyle="bold"
+        android:textSize="18sp"
+        />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
