Implement BaseValidator.kt,add validation to ChangePasswordActivity.kt and update pt-br translations

--- a/app/src/main/res/layout/activity_request_change_password.xml
+++ b/app/src/main/res/layout/activity_request_change_password.xml
@@ -8,6 +8,18 @@
     tools:background="@color/splash_screen_dark_purple"
     >
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
     <com.google.android.material.progressindicator.LinearProgressIndicator
         android:id="@+id/progress_sending"
         android:layout_width="match_parent"
@@ -70,6 +82,9 @@
         android:text="@string/label_request_via_email"
         android:layout_margin="40dp"
         />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </ScrollView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
