--- a/app/src/main/res/layout/activity_book_list.xml
+++ b/app/src/main/res/layout/activity_book_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.book.gridList.BookListActivity">
+    tools:context=".ui.book.linearList.BookListActivity">
 
     <com.google.android.material.progressindicator.LinearProgressIndicator
         android:id="@+id/pg_loading"
